# solution-desk-engine

./: .bandit  .envrc  .flake8  .gitignore  .gitignore.bak  .gitleaks.toml  .mcp.json  .pre-commit-config.yaml  .pre-commit-config.yaml.bak  .pylintrc  .secrets.baseline  CHANGELOG.md  CLAUDE.md  Dockerfile  Dockerfile.bak  GENESIS_GUIDE.md  Makefile  README.md  docker-compose.yml  docker-compose.yml.bak  genesis_cli-2.0.0-py3-none-any.whl  genesis_shared_core-0.2.1-py3-none-any.whl  pyproject.toml  setup  setup.sh  test_progress.json
.claude/: LEAN-TDD-WORKFLOW.md  settings.json  settings.json.bak  settings.local.json
.claude/agents/: ai-engineer-expert.md  bloat-detector.md  build-validator.md  complexity-auditor.md  dependency-tracker.md  documentation-minimalist.md  issue-analyst.md  lean-implementer.md  performance-monitor.md  python-expert-coder.md  refactoring-specialist.md  scope-guardian.md  test-designer.md
.claude/commands/: analyze-agent-data.md  audit-solution.md  audit.md  bug.md  cleanup.md  close.md  commit.md  commit.md.bak  deprecate.md  execute-issue.md.bak  feature.md  fix-all-errors.md  issue.md  metrics.md  optimize.md  pr-merged.md  pr-merged.md.bak  pr.md  refactor.md  research.md  tdd.md  test-fix.md  update-docs.md  update-docs.md.bak
.claude/hooks/: block-bypass-commands.md  update-docs.py  validate-bash-command.sh  validate-bash-command.sh.bak
.genesis/: .sync_checksums.json  README-auto-organization.md  agent-seccomp.json.bak  manifest.json  manifest.yml  sync-state.json  sync.yml
.genesis/config/: envrc  gitignore.template
.genesis/docker/: Dockerfile  docker-compose.yml
.genesis/hooks/: post-checkout  post-commit  post-merge  pre-push
.genesis/scripts/: audit-agent.sh  bump-version.sh.bak  check-file-organization.sh  check-genesis-components.sh  check-variable-defaults.sh  find-hardcoded-values.sh  setup-agent.sh.bak  validate-bootstrap.sh  validate-components.sh  version.py
.github/workflows/: release.yml
agents/: README.md
best-practices/: 12-agentic-transformation-principles.md  daf-sow-preparation-plan.md  gcp-consumption-calculation-guide.md  quality-assurance-and-verification-protocols.md
config/: .gitignore  README.md
docs/: CLAUDE.md  README.md
docs/api/: .gitkeep  README.md
docs/architecture/: .gitkeep  CLAUDE.md
docs/design/: Intelligent-Document-Selection-System.md  Technical-Sales-Solutioning-MVP-PRD.md  franchise-lease-management-prd.md  migration.md
docs/framework/: 11-phase-methodology.md  AGENT-INSTRUCTIONS.md  README.md  document-mappings.md  intelligent-selection-algorithm.md  research-directory-recreation-guide.md  templates-organization-assessment.md
docs/guides/: .gitkeep  1-opportunity-setup.md  agent-creation-best-practices.md  agent-orchestration-architecture.md  agent-persona-template.md
docs/reference/: genesis-principles.md  genesis-shared-core.md  quick-start.md
docs/releases/: README.md  v0.1.0.md
docs/standards/: CLAUDE.md
docs/vision/: CLAUDE.md
export/: README-googledocs-setup.md  README.md  export_docs.py
opportunities/: README.md
scripts/: README.md  container-rebuild.sh  container-setup.sh  setup.sh
templates/: README.md
tests/: conftest.py  test_cli.py  test_cli_sow.py  test_config_project_config.py  test_config_project_config_extended.py  test_export_document_exporter.py  test_export_simple.py  test_final_coverage.py  test_framework_methodology.py  test_framework_progress_tracker.py  test_google_drive.py  test_integration.py  test_main.py  test_progress_simple.py  test_quality_validator.py  test_simple_coverage.py  test_sow_generator.py
(+94 files in other folders)
