[tool.poetry]
name = "solution-desk-engine"
version = "0.1.0"
description = "A solution-desk-engine project created with Genesis"
authors = ["Test User <test@example.com>"]
readme = "README.md"
packages = [{include = "solution_desk_engine", from = "src"}]

[tool.poetry.dependencies]
python = "^3.13"
# Genesis shared utilities - proven patterns from Genesis toolkit
shared-core = {path = "../genesis/shared-python", develop = true}
fastapi = "*"
uvicorn = {extras = ["standard"], version = "*"}
pydantic = "*"
pydantic-settings = "*"
python-dotenv = "*"
genesis = {path = "../genesis"}

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-cov = "*"
pytest-asyncio = "*"
pytest-watch = "*"
httpx = "*"
black = "*"
isort = "*"
mypy = "*"
flake8 = "*"
bandit = "*"
pylint = "*"
ruff = "*"
pre-commit = "*"
gunicorn = "*"
# Note: direnv is required for .envrc auto-loading but must be installed system-wide
# Install: brew install direnv (macOS) or apt-get install direnv (Ubuntu)

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["solution_desk_engine"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "--cov=solution_desk_engine",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=80"
]
asyncio_mode = "auto"
